Fix responsive bugs and styles mismatch issues
change the global scrollbar style and in-progress display way from flex to grid

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,25 +1,23 @@
 @tailwind base;
 
-/* Firefox scrollbar styling */
-* {
-  scrollbar-width: thin;
-  scrollbar-color: #676767;
-}
+.custom-scrollbar {
+  &::-webkit-scrollbar {
+    width: 7px;
+  }
 
-/* Chrome, Edge, and Safari scrollbar styling */
-*::-webkit-scrollbar {
-  width: 7px;
-}
+  &::-webkit-scrollbar-track {
+    background: transparent; 
+  }
 
-*::-webkit-scrollbar-track {
-  background: transparent;
-}
+  &::-webkit-scrollbar-thumb {
+    background: transparent; 
+  }
 
-*::-webkit-scrollbar-thumb {
-  background-color: #676767;
-  border-radius: 16px;
+  &:hover::-webkit-scrollbar-thumb {
+    background: #676767;
+    border-radius: 16px;
+  }
 }
-
 
 @tailwind components;
 @tailwind utilities;
